tests/ui/compile-fail/pin_data/missing_comma.stderr
error: expected `,`, or `}`, found `b`
 --> tests/ui/compile-fail/pin_data/missing_comma.rs:5:16
  |
5 |     a: Box<Foo>
  |                ^ help: try adding a comma: `,`

error: expected one of `!`, `)`, `+`, `,`, or `::`, found `Box`
  --> tests/ui/compile-fail/pin_data/missing_comma.rs:10:21
   |
10 | struct Bar(Box<Bar> Box<Bar>);
   |                    -^^^ expected one of `!`, `)`, `+`, `,`, or `::`
   |                    |
   |                    help: missing `,`

error: expected `,`
 --> tests/ui/compile-fail/pin_data/missing_comma.rs:6:5
  |
6 |     b: Box<Foo>
  |     ^

error: expected `,`
  --> tests/ui/compile-fail/pin_data/missing_comma.rs:10:21
   |
10 | struct Bar(Box<Bar> Box<Bar>);
   |                     ^^^
